# ml-datasets

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  pytest.yml
ml_datasets/: __init__.py  _registry.py  cmu.py  dbpedia.py  imdb.py  mnist.py  quora.py  reuters.py  snli.py  spacy_readers.py  stack_exchange.py  universal_dependencies.py  util.py  wikiner.py
ml_datasets/loaders/: __init__.py  cifar.py  cmu.py  dbpedia.py  imdb.py  mnist.py  quora.py  reuters.py  snli.py  stack_exchange.py  universal_dependencies.py  wikiner.py
ml_datasets/spacy_readers/: __init__.py  cmu_reader.py  dbpedia_reader.py  imdb_reader.py
ml_datasets/test/: test_datasets.py  test_util.py
