[metadata]
version = 0.2.1
description = Machine Learning dataset loaders
url = https://github.com/explosion/ml-datasets
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.8
install_requires =
    cloudpickle>=2.2
    numpy>=1.18
    tqdm>=4.10.0,<5.0.0
    # Our libraries
    srsly>=1.0.1,<4.0.0
    catalogue>=0.2.0,<3.0.0

[options.entry_points]
spacy_readers =
    ml_datasets.imdb_sentiment.v1 = ml_datasets.spacy_readers:imdb_reader
    ml_datasets.cmu_movies.v1 = ml_datasets.spacy_readers:cmu_reader
    ml_datasets.dbpedia.v1 = ml_datasets.spacy_readers:dbpedia_reader

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    ml_datasets/__init__.py
